...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/recipe_step_previous_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_back_black_48px"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>

            <ImageView
                android:id="@+id/recipe_step_next_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_forward_black_48px"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>
...
