<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipestep_list"
    android:name="com.alvarosantisteban.bakingapp.RecipeStepListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.alvarosantisteban.bakingapp.RecipeStepListActivity"
    tools:listitem="@layout/recipestep_list_item" />
